--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -450,7 +450,7 @@ errorCode.ERROR_REG_0066=修改后的发票号码不能过大!
 errorCode.ERROR_REG_0067=使用号码不能大于终止号码
 errorCode.ERROR_REG_0068=使用号码不能小于起始号码
 errorCode.ERROR_REG_0069=使用号码与其他号码长度不一致
-errorCode.ERROR_REG_0070=请在当前医保线路中维护本机ip地址
+errorCode.ERROR_REG_0070=请在当前医保线路中维护本机ip地址：{0}
 errorCode.ERROR_REG_0071=病人卡片是医保卡,不能查询!
 errorCode.ERROR_REG_0072=卡内余额不足,请充值!
 errorCode.ERROR_REG_0073=该卡不是充值卡!
@@ -785,6 +785,7 @@ errorCode.ERROR_NURSEWORK_ZYBRRY_00058=该患者有医技项目未确费!<br>
 errorCode.ERROR_NURSEWORK_ZYBRRY_00059=该患者有康复项目未确认!<br>
 errorCode.ERROR_NURSEWORK_ZYBRRY_00060=该患者中途结算日期为{0},此日期前的药品不允许退药!
 errorCode.ERROR_NURSEWORK_ZYBRRY_00061=请输入床位号或住院号码！
+errorCode.ERROR_NURSEWORK_ZYBRRY_00062=该患者有未复核的{0}的出院医嘱!<br>
 
 successCode.SUCCESS_NURSEWORK_ZYBRRY_00034=保存医嘱批量复核成功!但有医嘱,因录入与复核人不能为同人限制没有复核!
 successCode.SUCCESS_NURSEWORK_ZYBRRY_00035=保存医嘱批量复核成功!
